introduce Brutforcer interface for running paralel jobs
- rename GApp to Application
- add Runner helper class
- experiment with templates
- add run.sh script
- add sum example
- add ring example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-project(grid C CXX)
+project(grid CXX)
 
 set(CMAKE_CXX_COMPILER mpic++)
+set(CMAKE_CXX_STANDARD 11)
 
 find_package(MPI REQUIRED)
 if(NOT MPI_FOUND)
@@ -11,6 +12,8 @@ endif(NOT MPI_FOUND)
 
 include_directories(SYSTEM
 	${MPI_INCLUDE_PATH}
+	src
 )
 
 add_subdirectory(example)
+add_subdirectory(src)
