--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(helloworld)
 add_subdirectory(ring)
 add_subdirectory(sum)
 add_subdirectory(bruteforce)
+add_subdirectory(vigenere)
