PGA: initial commit code from Eugen

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,5 @@ list(APPEND GRID_SOURCES
 add_library(grid ${GRID_SOURCES})
 
 target_link_libraries(grid ${MPI_CXX_LIBRARIES})
+
+add_subdirectory(PGA)
