--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(grid CXX)
 set(CMAKE_CXX_COMPILER mpic++)
 set(CMAKE_CXX_STANDARD 11)
 
+#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
+#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
+
 find_package(MPI REQUIRED)
 if(NOT MPI_FOUND)
 	message(FATAL_ERROR "Package MPI not found")
