--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,25 @@ if(NOT MPI_FOUND)
 	message(FATAL_ERROR "Package MPI not found")
 endif(NOT MPI_FOUND)
 
-include_directories(SYSTEM
+set(BOOST_ROOT "vendor/boost_1_63_0")
+set(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME ON)
+set(BOOST_ALL_DYN_LINK OFF)
+
+find_package(Boost 1.63.0 REQUIRED COMPONENTS mpi serialization)
+IF(NOT Boost_FOUND)
+	message(FATAL_ERROR "Package boost not found")
+endif()
+
+include_directories(
+	${Boost_INCLUDE_DIR}
 	${MPI_INCLUDE_PATH}
 	src
 	src/PGA
 )
 
+link_directories(${Boost_LIBRARY_DIRS})
+
 add_subdirectory(src)
 add_subdirectory(project)
-
