app: boost adaptation changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,6 @@ list(APPEND GRID_SOURCES
 
 add_library(grid ${GRID_SOURCES})
 
-target_link_libraries(grid ${MPI_CXX_LIBRARIES})
+target_link_libraries(grid ${Boost_LIBRARIES})
 
 add_subdirectory(PGA)
