--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
 list(APPEND GRID_SOURCES
-    app.cpp
+    MpiApp.cpp
 )
 
 add_library(grid ${GRID_SOURCES})
-
 target_link_libraries(grid ${Boost_LIBRARIES})
 
 add_subdirectory(PGA)
