PGA/*: minor cleanup/changes

--- a/src/PGA/CMakeLists.txt
+++ b/src/PGA/CMakeLists.txt
@@ -15,9 +15,7 @@ list(APPEND PGA_SOURCES
 	GeneticOperationMutation.cpp
 	Chromosome.cpp
 	SelectTournament.cpp
-    Helpers.h
 )
 
 add_library(PGA ${PGA_SOURCES})
-
-# target_link_libraries(grid ${MPI_CXX_LIBRARIES})
+target_link_libraries(PGA ${Boost_LIBRARIES})
