--- a/project/helloworld/CMakeLists.txt
+++ b/project/helloworld/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_executable(helloworld main.cpp)
 
-target_link_libraries(helloworld
-    grid
-)
+target_link_libraries(helloworld grid)
+install(TARGETS helloworld DESTINATION ${PROJECT_SOURCE_DIR}/project/helloworld)
