--- a/project/vigenere/CMakeLists.txt
+++ b/project/vigenere/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_executable(vigenere main.cpp)
 
-target_link_libraries(vigenere
-    grid
-)
+target_link_libraries(vigenere grid)
+install(TARGETS vigenere DESTINATION ${PROJECT_SOURCE_DIR}/project/vigenere)
