--- a/project/helloworld/CMakeLists.txt
+++ b/project/helloworld/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(helloworld main.cpp)
+add_executable(helloworld
+	src/main.cpp
+)
 
 target_link_libraries(helloworld grid)
 install(TARGETS helloworld DESTINATION ${PROJECT_SOURCE_DIR}/project/helloworld)
