- rename src -> module - move fitness out of PGA -> module/fitness - move cipher out of PGA -> module/cipher - add module/utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,10 @@ include_directories(
 	${Boost_INCLUDE_DIR}
 	${MPI_INCLUDE_PATH}
 	vendor/cache/include
-	src
-	src/PGA
+	module
 )
 
 link_directories(${Boost_LIBRARY_DIRS})
 
-add_subdirectory(src)
+add_subdirectory(module)
 add_subdirectory(project)
