--- a/module/PGA/CMakeLists.txt
+++ b/module/PGA/CMakeLists.txt
@@ -1,5 +1,4 @@
 list(APPEND PGA_SOURCES
-	Cipher.cpp
 	GA.cpp
 	GeneticOperationMutationSwapAll.cpp
 	SelectElitism.cpp
@@ -7,12 +6,13 @@ list(APPEND PGA_SOURCES
 	GeneticOperationMutationSwap.cpp
     Migrator.cpp
 	SelectRandom.cpp
-	FitnessL1.cpp
 	GeneticOperationMutation.cpp
 	Chromosome.cpp
 	SelectTournament.cpp
 	SelectWorst.cpp
 )
 
-add_library(PGA ${PGA_SOURCES})
-target_link_libraries(PGA ${Boost_LIBRARIES})
+add_library(libPGA ${PGA_SOURCES})
+target_link_libraries(libPGA
+    ${Boost_LIBRARIES}
+)
