--- a/project/ga/CMakeLists.txt
+++ b/project/ga/CMakeLists.txt
@@ -4,5 +4,10 @@ add_executable(ga
     # add additional .cpp files here
 )
 
-target_link_libraries(ga grid PGA)
+target_link_libraries(ga
+    libMpi
+    libPGA
+    libCipher
+    libFitness
+)
 install(TARGETS ga DESTINATION ${PROJECT_SOURCE_DIR}/project/ga)
