--- a/project/pga/CMakeLists.txt
+++ b/project/pga/CMakeLists.txt
@@ -4,5 +4,10 @@ add_executable(pga
     # add additional .cpp files here
 )
 
-target_link_libraries(pga grid PGA)
+target_link_libraries(pga
+    libMpi
+    libPGA
+    libCipher
+    libFitness
+)
 install(TARGETS pga DESTINATION ${PROJECT_SOURCE_DIR}/project/pga)
